Fix java7 compatibility. java.util.Base64 is a Java8 library.